[package]
name = "rubelliond"
version = "0.1.0"
authors = ["Bjoern Kalkbrenner <terminar@cyberphoria.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

#rustc-link-search = ["./src/lib"]
#rustc-link-lib = ["test"]
#root = "/home/path/to/rust/proyect/"

[build-dependencies]
cc = "1.0.52"
bindgen = "0.64.0"

[dependencies]
serde_json = "1.0.95"
rosc = "~0.10"
